# multichargpt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: architecture.md
multichargpt/: components.py  dataset.py  evaluate_model.py  hooks.py  main.py  model.py  tokenizer.py  train.py
multichargpt/config/: config.yaml
multichargpt/config/data/: shakespeare.yaml
multichargpt/config/hydra/job_logging/: custom.yaml
multichargpt/config/model/: gpt_large.yaml  gpt_micro.yaml  gpt_small.yaml
